blueprints/education-training/salesforce/force-app/main/default/objects/Programme__c/Programme__c.object-meta.xml
<CustomObject>
    <description>One course or qualification in the catalogue, with its format, length and list price. A programme is what is sold. A cohort is a dated run of it.</description>
    <label>Programme</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Programmes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>