blueprints/education-training/salesforce/force-app/main/default/objects/Programme__c/fields/Accredited__c.field-meta.xml
<CustomField>
    <fullName>Accredited__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The programme leads to an external certificate or qualification.</description>
    <label>Accredited</label>
    <type>Checkbox</type>
</CustomField>