blueprints/education-training/salesforce/force-app/main/default/objects/Programme__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Subject area, matching the deal training need so demand and supply can be compared.</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Compliance and mandatory</fullName>
            </value>
            <value>
                <fullName>Leadership and management</fullName>
            </value>
            <value>
                <fullName>Technical skills</fullName>
            </value>
            <value>
                <fullName>Communication and soft skills</fullName>
            </value>
            <value>
                <fullName>Digital skills</fullName>
            </value>
            <value>
                <fullName>Health and safety</fullName>
            </value>
            <value>
                <fullName>Apprenticeship or accredited</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>