blueprints/education-training/salesforce/force-app/main/default/objects/Programme__c/fields/Delivery_format__c.field-meta.xml
<CustomField>
    <fullName>Delivery_format__c</fullName>
    <description>The usual way the programme is run.</description>
    <label>Delivery format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In person</fullName>
            </value>
            <value>
                <fullName>Virtual live</fullName>
            </value>
            <value>
                <fullName>Blended</fullName>
            </value>
            <value>
                <fullName>Self-paced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>