blueprints/education-training/salesforce/force-app/main/default/objects/Programme__c/fields/Duration_days__c.field-meta.xml
<CustomField>
    <fullName>Duration_days__c</fullName>
    <description>Total contact days. Used to quote and to schedule trainers.</description>
    <label>Duration (days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>