blueprints/education-training/salesforce/force-app/main/default/objects/Programme__c/fields/List_price__c.field-meta.xml
<CustomField>
    <fullName>List_price__c</fullName>
    <description>Standard price for one delegate before any discount.</description>
    <label>List price per delegate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>